// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It should only return non-done items. 1`] = `
Array [
  Object {
    "done": false,
  },
  Object {},
]
`;

exports[`It should reset properly by marking each item as having not yet been done. 1`] = `
Array [
  Array [
    "first-action",
    null,
    Object {},
  ],
  Object {},
  Object {},
  Object {},
  Object {},
  Object {},
]
`;

exports[`It should set initial steps properly. 1`] = `
Array [
  Object {},
  Object {},
  Object {},
]
`;

exports[`add() It should add multiple steps passed at once. 1`] = `
Array [
  Array [
    "first-action",
    null,
    Object {},
  ],
  Array [
    [Function],
    1,
  ],
  Array [
    [Function],
    2,
  ],
  Array [
    [Function],
    3,
  ],
]
`;

exports[`add() It should add steps properly. 1`] = `
Array [
  Array [
    "first-action",
    null,
    Object {},
  ],
  Array [
    "step1",
  ],
  Array [
    "step2",
  ],
]
`;
